# dg_agent

./: .gitignore  .pylintrc  MANIFEST.in  README.md  global.d.ts  main.py  pyproject.toml  requirements.txt  run.bat  setup.py
bot/: chat_app.py  mcp_server.py  settings.py
bot/agent/: __init__.py  age_cypher_agent.py  data_gov_agent.py  dg_mind.py  dg_support.py  gen_agent.py  metadata.py  metadata_tools.py  plan_agent.py  sql_agent.py
bot/graph/: age_graph.py
bot/models/: __init__.py
bot/web/: chat_app.html  marked.d.ts
drivers/: age-1.0.0-py3-none-any.whl
graph/: __init__.py  application.py  reload_graph.py  reload_relate.py  reload_table.py
make_graph/: __init__.py  domain.py  fetch_metadata.py  reload_graph.py  reload_table.py
src/bot/: chat_app.py  console.py  mcp_cypher_server.py  mcp_server.py  settings.py
src/bot/agent/: __init__.py  age_cypher_agent.py  dg_mind.py  dg_support.py  metadata.py  metadata_tools.py  ner_agent.py  plan_agent.py
src/bot/graph/: __init__.py  age_graph.py  base_graph.py  kuzu_graph.py
src/bot/graph/ontology/: __init__.py
src/bot/graph/ontology/age/: Application.py  BusinessDomain.py  BusinessTerm.py  Column.py  DataEntity.py  FlowsTo.py  PhysicalTable.py  RelatedTo.py  __init__.py
src/bot/graph/ontology/kuzu/: Application.py  BusinessDomain.py  BusinessTerm.py  Column.py  DataEntity.py  ExampleCypher.py  FlowsTo.py  PhysicalTable.py  RelatedTo.py  __init__.py
src/bot/models/: __init__.py  embedding.py  siliconflow.py
src/bot/provider/: bailian.py  ollama.py  siliconflow.py  vllm.py
src/bot/web/: chat_app.html  chat_app.ts  marked.d.ts
src/make_graph/: __init__.py  application.py  csv2age.py  csv2kuzu.py  dataentity.py  domain.py  entity.py  memo.md  reload_graph.py  reload_standard.py  reload_table.py  reload_term.py
src/make_vector/: reload_cypher_relevant.py  reload_names_relevant.py
tests/: call.http  conftest.py  test_age_cypher_agent.py  test_age_cypher_agent2.py  test_age_graph.py  test_chat_agent.py  test_data_gov_agent.py  test_dg_support_agent.py  test_gen_agent.py  test_kuzu_graph.py  test_mcp_server.py  test_metadata_helper.py  test_ner_agent.py  test_other.py  test_settings.py  test_vertex.py
