[project]
name = "dg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "age",
    "cachetools>=5.5.2",
    "fastapi>=0.115.11",
    "kuzu>=0.8.2",
    "logfire[fastapi]>=3.8.1",
    "lxml>=5.3.1",
    "mcp[cli]>=1.4.1",
    "openpyxl>=3.1.5",
    "opentelemetry-api==1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai==0.0.42",
    "python-multipart>=0.0.20",
    "sqlparse>=0.5.3",
    "uvicorn>=0.34.0",
]

[tool.logfire]
project_name="DG Agent"
console_colors="never"
ignore_no_config=true

[tool.uv.sources]
age = { path = "./drivers/age-1.0.0-py3-none-any.whl" }

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
